# sovereign

./: .gitignore  README.md  RESEARCH.md  pyproject.toml
notebooks/: demo.ipynb
sovereign/: __init__.py
sovereign/agents/: __init__.py  defender.py
sovereign/env/: __init__.py  config.py  map.py  mechanics.py  sovereign_env.py
sovereign/experiments/: ablations.py  capture_episodes.py  demo_episodes.py  derive_min_turn.py  parameter_sweep.py  plots.py
sovereign/training/: metrics.py  train_dqn.py  train_ppo.py
sovereign/ui/backend/: serve.py
sovereign/ui/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
sovereign/ui/frontend/src/: App.tsx
sovereign/ui/frontend/src/components/: ComparePanel.tsx  Gauge.tsx  LivePanel.tsx  MapGraph.tsx  RewardStack.tsx  RunsPanel.tsx
sovereign/ui/frontend/src/lib/: api.ts  mapLayouts.ts
sovereign/ui/frontend/src/styles/: index.css
tests/: test_env.py  test_mechanics.py
